Changed not to call the localized date format function but instead calls PR_FormatTimeUSEnglish() so later it can be parsed by PR_ParseTimeString() correctly, bug 30994, r=rjc,sr=mscott.